# Optics-Mininet

./: Dockerfile  Readme.md
.devcontainer/: devcontainer.json
p4/ocs/: ocs.json  ocs.p4  ocs.p4i
p4/tor/: tor.json  tor.p4  tor.p4i
src/: OpticalCLI.py  OpticalToolbox.py  README.md  hoho.py  my.py  mynetwork.py  opera.py  p4_mininet.py  requirements.txt  utils.py  vlb.py
src/dashboard/: manage.py
src/dashboard/dashboard/: asgi.py  settings.py  urls.py
src/dashboard/dashboardapp/: __init__.py  apps.py  consumers.py  models.py  routing.py  urls.py  views.py
src/dashboard/dashboardapp/templates/: dashboard.html
targets/: Makefile.am  configure.ac
targets/optical_switch/: .gitignore  Makefile.am  main.cpp  optical_switch.cpp  optical_switch.h  optical_switch_CLI.in  oswitch_CLI  oswitch_CLI.py  primitives.cpp  queue.h  register_access.h  runner.cpp
targets/optical_switch/bm/optical_switch/: runner.h
targets/optical_switch/tests/: Makefile.am  test_packet_redirect.cpp  test_parser_error.cpp  test_queueing.cpp  test_recirc.cpp  test_swap.cpp  test_truncate.cpp  utils.h
targets/optical_switch/tests/CLI_tests/: run_one_test.py.in
targets/optical_switch/thrift/: optical_switch.thrift
targets/optical_switch/thrift/src/: OpticalSwitch_server.cpp
targets/tor_switch/: .gitignore  Makefile.am  calendar_queue.h  main.cpp  primitives.cpp  queue_alex.h  runner.cpp  tor_switch.cpp  tor_switch.h  tor_switch_CLI.in  tswitch_CLI  tswitch_CLI.py
targets/tor_switch/bm/tor_switch/: runner.h
targets/tor_switch/tests/: test_packet_redirect.cpp  test_parser_error.cpp  test_queueing.cpp  test_recirc.cpp  test_swap.cpp  test_truncate.cpp
targets/tor_switch/tests/CLI_tests/: mc_dump.test  run_one_test.py.in
targets/tor_switch/tests/CLI_tests/testdata/: ecmp.json  indirect_res.json  table_dump_extra.json
targets/tor_switch/thrift/: tor_switch.thrift
targets/tor_switch/thrift/src/: TorSwitch_server.cpp
